test/syntax-errors/problem2.js
var expect = require('chai').expect;

var f = require('../../src/syntax-errors/problem2.js');

console.log("Everything OK!");